--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7585,6 +7585,21 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.button {
+  background-color: #4299e1;
+  color: #fff;
+  font-weight: 400;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 0.25rem;
+}
+
+.button:hover {
+  background-color: #2b6cb0;
+}
+
 @media (min-width: 640px) {
   .sm\:appearance-none {
     -webkit-appearance: none;
