--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,10 +18,6 @@
     @apply .font-normal .text-xl .mb-4 .px-5 .py-1 .border-l-4;
 }
 
-.card-description {
-    @apply .px-5 .text-gray-600 .font-light;
-}
-
 .task-card {
     @apply .bg-white .rounded .shadow .p-4 .mb-3;
 }
@@ -32,4 +28,8 @@
 
 .button:hover {
     @apply .bg-blue-700;
+}
+
+.avatar-picture {
+    @apply .rounded-full .-ml-2;
 }
