--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7589,6 +7589,19 @@ video {
   border-radius: 0.25rem;
 }
 
+.button-muted {
+  background-color: #fff;
+  color: #4299e1;
+  border-width: 1px;
+  border-color: #4299e1;
+  font-weight: 400;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 0.25rem;
+}
+
 .button:hover {
   background-color: #2b6cb0;
 }
@@ -7596,6 +7609,21 @@ video {
 .avatar-picture {
   border-radius: 9999px;
   margin-left: -0.5rem;
+}
+
+.owner-badge {
+  background-color: #edf2f7;
+  border-radius: 9999px;
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+  font-size: 0.875rem;
+  font-weight: 600;
+  color: #4a5568;
+  position: absolute;
+  margin-right: 1.25rem;
+  right: 0;
 }
 
 @media (min-width: 640px) {
