--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,10 +26,18 @@
     @apply .bg-blue-500 .text-white .font-normal .py-2 .px-4 .rounded;
 }
 
+.button-muted {
+    @apply .bg-white .text-blue-500 .border .border-blue-500 .font-normal .py-2 .px-4 .rounded;
+}
+
 .button:hover {
     @apply .bg-blue-700;
 }
 
 .avatar-picture {
     @apply .rounded-full .-ml-2;
+}
+
+.owner-badge {
+    @apply .bg-gray-200 .rounded-full .px-3 .py-1 .text-sm .font-semibold .text-gray-700 .absolute .mr-5 .right-0;
 }
